--- a/src/main/resources/login.html
+++ b/src/main/resources/login.html
@@ -68,6 +68,7 @@
                 success:function (data){
                     if (data.status == "success"){
                         alert("登录成功");
+                        window.location.href = "listitem.html";
 
                     }else
                     {
